// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing Button rendering renders as expected 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    onPress={[Function]}
    text=""
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "activeOpacity": 0.2,
      "children": <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#2f95dc",
            "borderRadius": 5,
            "justifyContent": "center",
            "margin": 5,
            "paddingHorizontal": 10,
            "paddingVertical": 10,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "rgba(255, 255, 255, 1)",
              "fontSize": 18,
            }
          }
        >
          
        </Text>
      </View>,
      "onPress": [Function],
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "rgba(255, 255, 255, 1)",
              "fontSize": 18,
            }
          }
        >
          
        </Text>,
        "style": Object {
          "alignItems": "center",
          "backgroundColor": "#2f95dc",
          "borderRadius": 5,
          "justifyContent": "center",
          "margin": 5,
          "paddingHorizontal": 10,
          "paddingVertical": 10,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "accessible": true,
          "allowFontScaling": true,
          "children": "",
          "ellipsizeMode": "tail",
          "style": Object {
            "color": "rgba(255, 255, 255, 1)",
            "fontSize": 18,
          },
        },
        "ref": null,
        "rendered": "",
        "type": [Function],
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "activeOpacity": 0.2,
        "children": <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#2f95dc",
              "borderRadius": 5,
              "justifyContent": "center",
              "margin": 5,
              "paddingHorizontal": 10,
              "paddingVertical": 10,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "rgba(255, 255, 255, 1)",
                "fontSize": 18,
              }
            }
          >
            
          </Text>
        </View>,
        "onPress": [Function],
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "rgba(255, 255, 255, 1)",
                "fontSize": 18,
              }
            }
          >
            
          </Text>,
          "style": Object {
            "alignItems": "center",
            "backgroundColor": "#2f95dc",
            "borderRadius": 5,
            "justifyContent": "center",
            "margin": 5,
            "paddingHorizontal": 10,
            "paddingVertical": 10,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessible": true,
            "allowFontScaling": true,
            "children": "",
            "ellipsizeMode": "tail",
            "style": Object {
              "color": "rgba(255, 255, 255, 1)",
              "fontSize": 18,
            },
          },
          "ref": null,
          "rendered": "",
          "type": [Function],
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`testing Button rendering renders as expected 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    onPress={[Function]}
    text="Hello"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "activeOpacity": 0.2,
      "children": <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#2f95dc",
            "borderRadius": 5,
            "justifyContent": "center",
            "margin": 5,
            "paddingHorizontal": 10,
            "paddingVertical": 10,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "rgba(255, 255, 255, 1)",
              "fontSize": 18,
            }
          }
        >
          Hello
        </Text>
      </View>,
      "onPress": [Function],
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "rgba(255, 255, 255, 1)",
              "fontSize": 18,
            }
          }
        >
          Hello
        </Text>,
        "style": Object {
          "alignItems": "center",
          "backgroundColor": "#2f95dc",
          "borderRadius": 5,
          "justifyContent": "center",
          "margin": 5,
          "paddingHorizontal": 10,
          "paddingVertical": 10,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "accessible": true,
          "allowFontScaling": true,
          "children": "Hello",
          "ellipsizeMode": "tail",
          "style": Object {
            "color": "rgba(255, 255, 255, 1)",
            "fontSize": 18,
          },
        },
        "ref": null,
        "rendered": "Hello",
        "type": [Function],
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "activeOpacity": 0.2,
        "children": <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#2f95dc",
              "borderRadius": 5,
              "justifyContent": "center",
              "margin": 5,
              "paddingHorizontal": 10,
              "paddingVertical": 10,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "rgba(255, 255, 255, 1)",
                "fontSize": 18,
              }
            }
          >
            Hello
          </Text>
        </View>,
        "onPress": [Function],
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "rgba(255, 255, 255, 1)",
                "fontSize": 18,
              }
            }
          >
            Hello
          </Text>,
          "style": Object {
            "alignItems": "center",
            "backgroundColor": "#2f95dc",
            "borderRadius": 5,
            "justifyContent": "center",
            "margin": 5,
            "paddingHorizontal": 10,
            "paddingVertical": 10,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessible": true,
            "allowFontScaling": true,
            "children": "Hello",
            "ellipsizeMode": "tail",
            "style": Object {
              "color": "rgba(255, 255, 255, 1)",
              "fontSize": 18,
            },
          },
          "ref": null,
          "rendered": "Hello",
          "type": [Function],
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`testing Button rendering renders as expected 3`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    onPress={[Function]}
    text="Hello"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "activeOpacity": 0.2,
      "children": <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#2f95dc",
            "borderRadius": 5,
            "justifyContent": "center",
            "margin": 5,
            "paddingHorizontal": 10,
            "paddingVertical": 10,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "rgba(255, 255, 255, 1)",
              "fontSize": 18,
            }
          }
        >
          Hello
        </Text>
      </View>,
      "onPress": [Function],
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "rgba(255, 255, 255, 1)",
              "fontSize": 18,
            }
          }
        >
          Hello
        </Text>,
        "style": Object {
          "alignItems": "center",
          "backgroundColor": "#2f95dc",
          "borderRadius": 5,
          "justifyContent": "center",
          "margin": 5,
          "paddingHorizontal": 10,
          "paddingVertical": 10,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "accessible": true,
          "allowFontScaling": true,
          "children": "Hello",
          "ellipsizeMode": "tail",
          "style": Object {
            "color": "rgba(255, 255, 255, 1)",
            "fontSize": 18,
          },
        },
        "ref": null,
        "rendered": "Hello",
        "type": [Function],
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "activeOpacity": 0.2,
        "children": <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#2f95dc",
              "borderRadius": 5,
              "justifyContent": "center",
              "margin": 5,
              "paddingHorizontal": 10,
              "paddingVertical": 10,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "rgba(255, 255, 255, 1)",
                "fontSize": 18,
              }
            }
          >
            Hello
          </Text>
        </View>,
        "onPress": [Function],
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "rgba(255, 255, 255, 1)",
                "fontSize": 18,
              }
            }
          >
            Hello
          </Text>,
          "style": Object {
            "alignItems": "center",
            "backgroundColor": "#2f95dc",
            "borderRadius": 5,
            "justifyContent": "center",
            "margin": 5,
            "paddingHorizontal": 10,
            "paddingVertical": 10,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessible": true,
            "allowFontScaling": true,
            "children": "Hello",
            "ellipsizeMode": "tail",
            "style": Object {
              "color": "rgba(255, 255, 255, 1)",
              "fontSize": 18,
            },
          },
          "ref": null,
          "rendered": "Hello",
          "type": [Function],
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
